# rustybytes

./: .gitignore
backend/: Cargo.toml  readme
backend/migrations/: 20250201185228_create_users_table.sql
backend/src/: db.rs  errors.rs  main.rs
backend/src/dev_middleware/: auth.rs
backend/src/handlers/: auth.rs
backend/src/models/: models.rs
backend/src/routes/: auth.rs  mod.rs  protected.rs  public.rs
backend/src/services/: auth.rs
bevy_tic_tac_toe/: Cargo.toml  readme
bevy_tic_tac_toe/src/: main.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/pages/: Game.jsx  Login.jsx  Register.jsx
rs_breakout/: Cargo.toml  readme
