[package]
name = "rustybytes"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = "0.8.1"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5.2"
serde_json = "1.0.138"
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Database Connection
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15"
serde = {version = "1", features = ["derive"]}
chrono = {version ="0.4", features = ["serde"]}
bcrypt = "0.17.0"
jsonwebtoken = "9.3.0"


# Utilities
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-rustls = "0.26.1"
rustls = "0.23.22"
rustls-pemfile = "2.2.0"
config = "0.15.7"
validator = {version = "0.20.0", features = ["derive"]}
tower-http = { version = "0.6.2", features = ["cors"] }
